# CongitivePractice

backend/: CMakeLists.txt
backend/include/config/: config.hpp
backend/include/controller/: admine_controller.hpp  login_controller.hpp  merchant.hpp
backend/include/database/: sql_helper.hpp
backend/include/models/: log.hpp  order.hpp  product.hpp  role.hpp  store.hpp  user.hpp
backend/include/router/: api_router.hpp
backend/include/service/: admine_servoce.hpp  login_servce.hpp  mechant.hpp
backend/src/: main.cpp
backend/src/config/: app_config.cpp
backend/src/controller/: admine_controller.cpp  login_controller.cpp  merchant_controller.cpp
backend/src/database/: dp_pool.cpp
backend/src/models/: log.cpp  order.cpp  product.cpp  role.cpp  store.cpp  user.cpp
backend/src/router/: api_router.cpp
backend/src/service/: admine_service.cpp  login_servce.cpp  mechant_service.cpp
frontend/: index.html
frontend/css/: common.css  log.css
frontend/html/admine/: log.html  permission.html  user.html
frontend/html/merchant/: member.html  order.html  products.html  statistics.html  store.html
frontend/js/: admine.js  login.js  mercant.js
frontend/js/utils/: requests.js
